@@ -1,2 +1,5 @@
+[B]1.0.1[/B]
+Changed: New Scraper Icon
+
 [B]1.0.0[/B]
 Initial version
